--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
           <h1>Hi, we're <span class="accent">TeamName</span></h1>
 
           <p class="lead">
-            Unity & Unreal Developers • AR/VR Explorers • VRGC Members • Creative Indie Team
+            OM • Ayushmaan • Zaki • Prateek • Vandit • Arighna
           </p>
 
           <p>
             We build small, playable Android games and WebGL prototypes together.  
-            Our long-term vision: create meaningful, enjoyable games as an indie team.
+            Our long-term vision: create meaningful, Learning games as an indie team.
           </p>
 
           <div class="cta-row">
