offline download links

--- a/games.html
+++ b/games.html
@@ -41,11 +41,11 @@
 
         <!-- EXAMPLE APK CARD -->
         <article class="game-card large glass animated">
-          <img class="thumb" src="assets/images/game1-thumb.jpg" alt="Physics Game" />
+          <img class="thumb" src="assets/images/PhysicsSlingy.jpg" alt="Physics Game" />
 
           <div class="card-body">
             <h3>Physics Simulation Game</h3>
-            <p class="desc">Basic physics concepts explained through gameplay.</p>
+            <p class="desc">Basic physics concept like projectile path with some fun is explained through gameplay.</p>
 
             <ul class="features">
               <li>Easy controls for students</li>
@@ -55,12 +55,12 @@
 
             <div class="card-actions">
               <a class="btn"
-                 href="https://github.com/USERNAME/REPO/releases/download/v1.0/physics.apk"
+                 href="https://drive.google.com/file/d/1tIJu-9ll9NUB5JSM1epQ5uFglbQ54IDf/view?usp=sharing"
                  target="_blank">Download APK</a>
             </div>
           </div>
         </article>
-
+         
         <!-- ADD MORE APK GAMES BELOW THIS LINE -->
 
       </div>
