--- a/games.html
+++ b/games.html
@@ -76,11 +76,11 @@
 
         <!-- EXAMPLE WEB GAME -->
         <article class="game-card large glass animated">
-          <img class="thumb" src="assets/images/htmlgame-thumb.jpg" alt="HTML Game" />
+          <img class="thumb" src="assets/images/dodgeGame.jpg" alt="HTML Game" />
 
           <div class="card-body">
             <h3>HTML5 Dodge Game</h3>
-            <p class="desc">A simple web-based reaction game, works on all devices.</p>
+            <p class="desc">A simple web-based Dodging game, works on all devices.</p>
 
             <ul class="features">
               <li>Playable on phone</li>
@@ -90,7 +90,7 @@
 
             <div class="card-actions">
               <a class="btn outline"
-                 href="https://techwizard-007.github.io/MyWebGame/index.html"
+                 href="games/dodge/"
                  target="_blank">Play Online</a>
             </div>
           </div>
@@ -98,11 +98,11 @@
 
         <!-- EXAMPLE WEBGL GAME -->
         <article class="game-card large glass animated">
-          <img class="thumb" src="assets/images/webgl-thumb.jpg" alt="WebGL Game" />
+          <img class="thumb" src="assets/images/ReactionTimer.jpg" alt="HTML Game" />
 
           <div class="card-body">
             <h3>Unity WebGL Maze</h3>
-            <p class="desc">A lightweight maze challenge built in Unity WebGL.</p>
+            <p class="desc">A lightweight Student Reaction challenge built for testing the hand eye coordination.</p>
 
             <ul class="features">
               <li>Phone-friendly UI</li>
@@ -111,12 +111,31 @@
 
             <div class="card-actions">
               <a class="btn outline"
-                 href="https://techwizard-007.github.io/WebGLMaze/index.html"
+                 href="games/reaction/"
                  target="_blank">Play WebGL</a>
             </div>
           </div>
         </article>
 
+        <article class="game-card large glass animated">
+          <img class="thumb" src="assets/images/FlappyBlocks.jpg" alt="HTML Game" />
+
+          <div class="card-body">
+            <h3>Unity WebGL Maze</h3>
+            <p class="desc">A Flappy Bird Type Game for Students To check Their Patience Weapon!.</p>
+
+            <ul class="features">
+              <li>Phone-friendly UI</li>
+              <li>Works in browser</li>
+            </ul>
+
+            <div class="card-actions">
+              <a class="btn outline"
+                 href="games/flappy/"
+                 target="_blank">Play!</a>
+            </div>
+          </div>
+        </article>
         <!-- FOR ADDING MORE WEB GAMES BELOW THIS LINE -->
 
       </div>
